infra/route_table.tf
resource "aws_route_table" "main_route_table" {
  vpc_id = aws_vpc.main.id
}

resource "aws_route" "main_route" {
  route_table_id     = aws_route_table.main_route_table.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id         = aws_internet_gateway.main.id
}
